--- a/public/static/locales/ru/common.json
+++ b/public/static/locales/ru/common.json
@@ -1,5 +1,6 @@
 {
 	"hello": "Привет!",
+	"effect": "Эффект",
 	"forgotPassword": "Забыл пароль?",
 	"registerHere": "Зарегистрируйся!",
 	"invalidEmail": "Не правильный email!",
@@ -11,6 +12,7 @@
 	"email": "Email:",
 	"password": "Пароль:",
 	"signIn": "Войти",
+	"reset": "Сбросить пароль",
 	"signUp": "Регистрация",
 	"firstName": "Имя:",
 	"lastName": "Фамилия:",
@@ -18,6 +20,7 @@
 	"rePassword": "Повторите пароль:",
 	"userName": "Временный никнейм:",
 	"signInButton": "ВОЙТИ",
+	"resetButton": "СБРОСИТЬ",
 	"signUpButton": "ЗАРЕГИСТРИРОВАТЬСЯ",
 	"passwordError": "Пароли не совпадают!"
 }
